[package]
name = "wsntp"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.10"
rustfft = "6.4.1"
num-complex = "0.4.6"
rayon = "1.12.0"
ndarray = "0.17.2"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
rand = "0.8"
base64 = "0.22"
dirs = "6"
toml = "0.8"
zeroize = { version = "1", features = ["derive"] }